<resources>
    <string name="app_name">Orthopedic App</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    //lines to be added are below
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>

</resources>