<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myproject.EnteringApp.LoginActivity"
    android:orientation="vertical"
    android:id="@+id/container"
    android:background="@drawable/img_background"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="321dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/username"
            android:hint="@string/username"
            android:paddingLeft="2dp"
            android:background="@drawable/write_down"/>

        <EditText
            android:id="@+id/edittext_password"
            android:inputType="textPassword"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/write_down"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password" />
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="#009688"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>