<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.myproject.EnteringApp.RegisterActivity">

    <ImageView
        android:layout_width="437dp"
        android:layout_height="203dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="2dp"
        android:background="@drawable/write_down"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/write_down"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/write_down"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password"/>
    <EditText
        android:id="@+id/dateOfBirth"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/write_down"
        android:drawableLeft="@drawable/calendar"
        android:padding="5dp"
        android:drawablePadding="5dp"
        android:hint="Age"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/write_down"
        android:padding="5dp"
        android:drawablePadding="5dp"
        android:hint="Email"
        android:drawableLeft="@drawable/email"
         />

    <Button
        android:id="@+id/button_register"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="6dp"
            android:text="login"
            android:textColor="#009688"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
